--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 # dependencies
 /node_modules
 
-/src/environments/environment.ts
+# environments
+/src/environments
 
 # profiling files
 chrome-profiler-events*.json
